--- a/.config/systemd/user/hsetroot.service
+++ b/.config/systemd/user/hsetroot.service
@@ -6,7 +6,7 @@ Before=wm.target
 [Service]
 Type=oneshot
 Environment=DISPLAY=:0
-ExecStart=/usr/bin/hsetroot -solid '#1d1f21'
+ExecStart=/usr/bin/hsetroot -fill /home/nathan/pics/Wallpapers/gB2b8.png
 
 [Install]
 WantedBy=wm.target
