Uses latest tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,7 @@ set -g pane-base-index 1
 
 # screen mode
 set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
 
 # source config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -72,7 +73,7 @@ set-window-option -g automatic-rename off
 # bind -r C-l select-window -t:+
 
 # history
-set -g history-limit 4096
+set -g history-limit 8096
 
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -86,11 +87,19 @@ set -s escape-time 0
 # allows windows not constrained to the size of the smallest window
 setw -g aggressive-resize on
 
-# Set status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-left ""
-set -g status-right "#[fg=green]#H"
+# window title string (uses statusbar variables)
+set -g set-titles on
+set -g set-titles-string '#T'
+
+# status bar with load and time
+set -g status-bg '#4e4e4e'
+set -g status-fg '#ffffff'
+set -g status-left '#[bg=#4e4e4e]#[fg=#ffffff]#S'
+set -g status-right '#[bg=#bbbbbb]#[fg=#000000]#(cut -d " " -f -3 /proc/loadavg) #[bg=#4e4e4e]#[fg=#ffffff]#(date +" %H:%M ")'
+set -g window-status-format '#I #W'
+set -g window-status-current-format ' #I #W '
+setw -g window-status-current-bg '#55ff55'
+setw -g window-status-current-fg '#000000'
 
 # By default, all windows in a session are constrained to the size of the
 # smallest client connected to that session, even if both clients are
@@ -104,13 +113,6 @@ set -g visual-activity on
 # Example of using a shell command in the status line
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
-# Highlight active window
-set-window-option -g window-status-current-bg red
-
-# Proper titling
-set -g set-titles on
-set -g set-titles-string "#T"
-
 # mouse mode
 set -g mode-mouse on
 set -g mouse-resize-pane on
@@ -122,42 +124,25 @@ set -g status-position bottom
 set -g status on
 set -g status-utf8 on
 
-# powerline stuff
-if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 set -g status-interval 2
-set -g status-fg colour231
-set -g status-bg colour234
-set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]>'
-set -g status-right '#(eval hostname)'
-set -g status-right-length 150
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240]#[fg=colour249]#W"
-set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31]#I #[fg=colour231,bold]#W#[fg=colour117]#[fg=colour31,bg=colour234,nobold]"
+
+
+# default statusbar colors
+set -g status-fg white
+set -g status-bg default
+set -g status-attr bright
 
 # default window title colors
-setw -g window-status-fg brightblue
-setw -g window-status-bg default
-setw -g window-status-attr dim
+set-window-option -g window-status-fg white
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
 # active window title colors
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg default
-setw -g window-status-current-attr dim
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
-# pane border
-set -g pane-border-fg black
-set -g pane-border-bg default
-set -g pane-active-border-fg red
-set -g pane-active-border-bg default
-
-# command line/message text
+# command/message line colors
+set -g message-fg white
 set -g message-bg black
-set -g message-fg yellow
-
-# pane number display
-set -g display-panes-active-colour yellow
-set -g display-panes-colour brightblue
-
-# clock
-setw -g clock-mode-colour yellow
-# --- end colors
+set -g message-attr bright
