Unused termite stuff

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,7 +6,7 @@ audible_bell = false
 visible_bell = true
 mouse_autohide = false
 allow_bold = true
-font = Terminus (TTF) 12
+font = Terminus 12
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
@@ -14,57 +14,58 @@ scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
 #geometry = 640x480
-term = screen-256color
+term = xterm-256color
 
 # 0.0: opaque, 1.0: transparent
 transparency = 0.0
 pseudo_transparency = false
 
 # "system", "on" or "off"
-cursor_blink = system
+cursor_blink = on
 
 # "block", "underline" or "ibeam"
 cursor_shape = block
 
 # $BROWSER is used by default
-#browser = firefox
+browser = firefox
 
 # word characters used for word selection
 # (default if unset: all graphic non-punctuation/space characters)
 #word_chars = -A-Za-z0-9,./?%&#:_=+@~
 
 [colors]
-foreground = #707880
-foreground_bold = #c5c8c6
-#foreground_dim = #888888
-background = #1d1f21
-#cursor = #dcdccc
+foreground = #d0d0d0
+#foreground_bold = #f5f5f5
+#foreground_dim = #b0b0b0
+background = #151515
+cursor = #505050
 
 # if unset, will reverse foreground and background
 #highlight = #2f2f2f
 
 # colors from color0 to color254 can be set
-color0 = #282a2e
-color1 = #A54242
-color2 = #8C9440
-color3 = #de935f
-color4 = #5F819D
-color5 = #85678F
-color6 = #5E8D87
-color7 = #707880
-color8 = #373b41
-color9 = #cc6666
-color10 = #b5bd68
-color11 = #f0c674
-color12 = #81a2be
-color13 = #b294bb
-color14 = #8abeb7
-color15 = #c5c8c6
+
+color0 =  #151515
+color1 =  #ac4142
+color2 =  #90a959
+color3 =  #f4bf75
+color4 =  #6a9fb5
+color5 =  #aa759f
+color6 =  #75b5aa
+color7 =  #d0d0d0
+color8 =  #505050
+color9 =  #d28445
+color10 =  #202020
+color11 =  #303030
+color12 =  #b0b0b0
+color13 =  #e0e0e0
+color14 =  #8f5536
+color15 =  #f5f5f5
 
 [hints]
 font = Terminus (TTF) 12
-foreground = #dcdccc
-background = #3f3f3f
+foreground = #d0d0d0
+background = #151515
 padding = 2
 border = #3f3f3f
 border_width = 8
