--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
 set-option -g prefix C-a
+set-option -g status-keys vi # Use vi-style key bindings in the status line
 
 # vertical splits with |
 unbind %
@@ -92,14 +93,12 @@ set -g set-titles on
 set -g set-titles-string '#T'
 
 # status bar with load and time
-set -g status-bg '#4e4e4e'
-set -g status-fg '#ffffff'
-set -g status-left '#[bg=#4e4e4e]#[fg=#ffffff]#S'
-set -g status-right '#[bg=#bbbbbb]#[fg=#000000]#(cut -d " " -f -3 /proc/loadavg) #[bg=#4e4e4e]#[fg=#ffffff]#(date +" %H:%M ")'
-set -g window-status-format '#I #W'
-set -g window-status-current-format ' #I #W '
-setw -g window-status-current-bg '#55ff55'
-setw -g window-status-current-fg '#000000'
+set -g status-left-length 30
+set -g status-right-length 60
+set -g status-left '#[bg=#B294BB]#[fg=#1D1F21]#{session_name}#[bg=black]'
+set -g status-right '#[bg=#282A2E]#[fg=#C5C8C6]#{pane_current_command}#[fg=#707880] @ #{pane_pid} #[bg=#1D1F21]#[fg=#C5C8C6]#(date +" %H:%M ")'
+set -g window-status-format '[#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F]'
+set -g window-status-current-format '#[fg=#81A2BE]#[bg=#282A2E]<#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F#[fg=#81A2BE]>'
 
 # By default, all windows in a session are constrained to the size of the
 # smallest client connected to that session, even if both clients are
@@ -124,8 +123,8 @@ set -g status-position bottom
 set -g status on
 set -g status-utf8 on
 
+# how often to update the status bar
 set -g status-interval 2
-
 
 # default statusbar colors
 set -g status-fg white
@@ -138,7 +137,7 @@ set-window-option -g window-status-bg default
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-fg blue
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
@@ -146,3 +145,8 @@ set-window-option -g window-status-current-attr bright
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
+
+# pane-swapping shortcuts
+# pane movement
+bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
