--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,26 +1,22 @@
 Config { font = "-*-terminus-medium-*-*-*-16-*-*-*-*-*-iso8859-*"
-       , bgColor = "#002b36"
-       , fgColor = "#839496"
-       , position = TopW L 90
-       , commands = [ Run Weather "EGPF"
-                        [
-                         "-t"
-                         ," <tempF>F"
-                         ,"-L"
-                         ,"64"
-                         ,"-H"
-                         ,"77"
-                         ,"--normal","#859900"
-                         ,"--high","#dc322f"
-                         ,"--low","#268bd2"
-                        ] 36000
-                    , Run Cpu ["-L","3","-H","50","--normal","#859900","--high","#dc322f"] 10
+       , borderColor = "black"
+       , border = TopB
+       , bgColor = "black"
+       , fgColor = "grey"
+       , position = Top
+       , lowerOnStart = True
+       , persistent = False
+       , hideOnStart = False
+       , commands = [ Run Weather "EGPF" ["-t","<station>: <tempC>C","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
+                    , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
+                    , Run Network "eth1" ["-L","0","-H","32","--normal","green","--high","red"] 10
+                    , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Swap [] 10
-                    , Run Date "%a %b %_d %l:%M" "date" 10
-                    , Run StdinReader
+                    , Run Com "uname" ["-s","-r"] "" 36000
+    		    , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %cpu% | %memory% * %swap%    <fc=#ee9a00>%date%</fc> | %EGPF%"
+       , template = "%cpu% | %memory% * %swap% | %eth0% - %eth1% }{ <fc=#ee9a00>%date%</fc>| %EGPF% | %uname%"
        }
