--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ set repeat-time 750
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
-bind-key a send-prefix
+bind-key C-a send-prefix
 
 # I'm a Vim user, this makes navigation easier
 setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
@@ -37,11 +37,11 @@ unbind-key l
 bind-key l select-pane -R
 
 # smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Pane breaking
 unbind Up
@@ -80,7 +80,7 @@ set -g history-limit 8096
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # C-a C-a for last active window
-bind-key C-a last-window
+bind-key a last-window
 
 # set escape delay time to zero
 set -s escape-time 0
