Makes C-a a switch windows again

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ set repeat-time 750
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
-bind-key C-a send-prefix
+bind-key s send-prefix
 
 # I'm a Vim user, this makes navigation easier
 setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
@@ -80,7 +80,7 @@ set -g history-limit 8096
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # C-a C-a for last active window
-bind-key a last-window
+bind-key C-a last-window
 
 # set escape delay time to zero
 set -s escape-time 0
