--- a/.config/systemd/user/xmonad.service
+++ b/.config/systemd/user/xmonad.service
@@ -3,10 +3,9 @@ Description=Advanced modern tiling window manager
 
 [Service]
 Environment=DISPLAY=:0
-ExecStart=/home/nathan/.xmonad/xmonad-x86_64-linux
-ExecReload=/home/nathan/.xmonad/xmonad-x86_64-linux --recompile --restart
+ExecStart=/home/nathan/.xmonad/xmonad
 Restart=always
 RestartSec=10
- 
+
 [Install]
 WantedBy=wm.target
