remove mouse mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,10 +113,10 @@ set -g visual-activity on
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
 # mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 
 # General status stuff
 set -g status-position bottom
