--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim"]
 	path = .vim
 	url = git://github.com/nathantypanski/.vim
+[submodule ".xmonad/xmobar"]
+	path = .xmonad/xmobar
+	url = git@github.com:nathantypanski/xmobar.git
