updates for new tmux version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,15 +3,19 @@ unbind C-b
 set-option -g prefix C-a
 set-option -g status-keys vi # Use vi-style key bindings in the status line
 
-# vertical splits with |
+# Unbind the default split commands
 unbind %
 unbind -
-bind \ split-window -h
-bind - split-window -v
+# New pane in the current directory
+bind \ split-window -h -c "#{pane_current_path}"
+# New pane in the home directory
+bind | split-window -h
+bind - split-window -v -c "#{pane_current_path}"
+bind _ split-window -v
 bind-key x kill-pane
 
 # Give us a slightly higher repeat delay for repeatable keystrokes
-set repeat-time 750
+#set repeat-time 750
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -123,6 +127,9 @@ set -g status-position bottom
 set -g status on
 set -g status-utf8 on
 
+# Renumber windows when I close windows
+set -g renumber-windows on
+
 # how often to update the status bar
 set -g status-interval 2
 
@@ -150,3 +157,22 @@ set -g message-attr bright
 # pane movement
 bind-key J command-prompt -p "join pane from:"  "join-pane -s '%%'"
 bind-key S command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
+# New window in the current directory
+bind-key c neww -c "#{pane_current_path}"
+# New window in the home directory
+bind-key C neww
+# Show a pretty selector between tmux panes
+bind-key S choose-session
+bind-key L next-layout
+bind-key H previous-layout
+
+# Automatically rename windows
+set-window-option -g automatic-rename on
+
+# set the update change interval
+set-window-option -g c0-change-interval 25
+set-window-option -g utf8 on
+set-window-option -g xterm-keys off
+bind-key m command-prompt -p "man >" "new-window 'exec man %%'"
+bind-key b command-prompt -p "ranger >" "new-window 'exec ranger %%'"
