stop autorenumbering tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,9 +70,6 @@ set -g terminal-overrides 'xterm:colors=256'
 # source config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# turn off automatic window renaming
-set-window-option -g automatic-rename off
-
 # Window cycling
 # bind -r C-h select-window -t:-
 # bind -r C-l select-window -t:+
@@ -127,8 +124,8 @@ set -g status-position bottom
 set -g status on
 set -g status-utf8 on
 
-# Renumber windows when I close windows
-set -g renumber-windows on
+# Don't renumber windows when I close them!
+set -g renumber-windows off
 
 # how often to update the status bar
 set -g status-interval 2
