--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".xmonad/xmobar"]
 	path = .xmonad/xmobar
 	url = git@github.com:nathantypanski/xmobar.git
+[submodule ".emacs.d"]
+	path = .emacs.d
+	url = git@github.com:nathantypanski/emacs.d
