--- a/.config/systemd/user/gitit.service
+++ b/.config/systemd/user/gitit.service
@@ -4,7 +4,8 @@ Description=my personal wiki
 [Service]
 Type=simple
 WorkingDirectory=%h/.gitit
-ExecStart=/home/nathan/.cabal/bin/gitit -f %h/.gitit/my.conf
+Environment=CABAL_SANDBOX_CONFIG=%h/.gitit/cabal.sandbox.config
+ExecStart=/usr/bin/cabal exec %h/.gitit/start.sh
 Restart=no
 
 [Install]
