arrowkey bindings broke in latest tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,10 +48,10 @@ bind-key l select-pane -R
 # bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Pane breaking
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+# unbind Up
+# bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+# unbind Down
+# bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
 
 # shell
 set -g default-command /bin/zsh
