--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,10 +96,10 @@ set -g set-titles-string '#T'
 # status bar with load and time
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-left '#[bg=#B294BB]#[fg=#1D1F21]#{session_name}#[bg=black]'
-set -g status-right '#[bg=#282A2E]#[fg=#C5C8C6]#{pane_current_command}#[fg=#707880] @ #{pane_pid} #[bg=#1D1F21]#[fg=#C5C8C6]#(date +" %H:%M ")'
-set -g window-status-format '[#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F]'
-set -g window-status-current-format '#[fg=#81A2BE]#[bg=#282A2E]<#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F#[fg=#81A2BE]>'
+set -g status-left '#[bg=#5F7F5F]#[fg=#FFFFFF]#{session_name}#[bg=3F3F3f]'
+set -g status-right '#[bg=#3F3F3F]#[fg=#C5C8C6]#{pane_current_command}#[fg=#707880] @ #{pane_pid} #[bg=#494949]#[fg=#C5C8C6]#(date +" %H:%M ")'
+set -g window-status-format '#[fg=#707880][#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F]'
+set -g window-status-current-format '#[bg=#3F3F3F]#[fg=#81A2BE]<#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F#[fg=#81A2BE]>'
 
 # By default, all windows in a session are constrained to the size of the
 # smallest client connected to that session, even if both clients are
@@ -121,6 +121,7 @@ set -g visual-activity on
 
 # General status stuff
 set -g status-position bottom
+
 set -g status on
 set -g status-utf8 on
 
