--- a/.config/systemd/user/sxhkd@.service
+++ b/.config/systemd/user/sxhkd@.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=set keyboard input rates
+Description=simple X hotkey daemon
 
 [Service]
 Type=simple
 Environment=DISPLAY=:%i
-ExecStart=/usr/bin/xset r rate 200 50
+ExecStart=/usr/bin/sxhkd
+ExecReload=/usr/bin/kill -s USR1 $MAINPID
 
 [Install]
 WantedBy=wm@.target
