--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -20,33 +20,36 @@
 # ===================================================================
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,2,1
+set column_ratios 1,3,4
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden true
+set show_hidden false
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always" (default), "never", "multiple"
 # With "multiple", ranger will ask only if you delete multiple files at once.
-set confirm_on_delete always
+set confirm_on_delete multiple
 
 # Which script is used to generate file previews?
 # ranger ships with scope.sh, a script that calls external programs (see
-# README for dependencies) to preview images, archives, etc.
+# README.md for dependencies) to preview images, archives, etc.
 set preview_script ~/.config/ranger/scope.sh
 
-# Use the external preview script or display simple plain text previews?
+# Use the external preview script or display simple plain text or image previews?
 set use_preview_script true
+
+# Automatically count files in the directory, even before entering them?
+set automatically_count_files true
 
 # Open all images in this directory when running certain image viewers
 # like feh or sxiv?  You can still open selected files by marking them.
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware true
+set vcs_aware false
 
 # State of the three backends git, hg, bzr. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -58,10 +61,10 @@ set vcs_backend_bzr disabled
 # Preview images in full color with the external command "w3mimgpreview"?
 # This requires the console web browser "w3m" and a supported terminal.
 # It has been successfully tested with "xterm" and "urxvt" without tmux.
-set preview_images true
+set preview_images false
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis true
+set unicode_ellipsis false
 
 # Show dotfiles in the bookmark preview box?
 set show_hidden_bookmarks true
@@ -90,7 +93,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders false
 
 # Display the directory name in tabs?
-set dirname_in_tabs true
+set dirname_in_tabs false
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -103,17 +106,17 @@ set display_size_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title true
+set update_title false
 
 # Set the title to "ranger" in the tmux program?
-set update_tmux_title true
+set update_tmux_title false
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
 set shorten_title 3
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar true
+set tilde_in_titlebar false
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -144,7 +147,7 @@ set autoupdate_cumulative_size false
 # Turning this on makes sense for screen readers:
 set show_cursor false
 
-# One of: size, basename, mtime, type
+# One of: size, natural, basename, atime, ctime, mtime, type, random
 set sort natural
 
 # Additional sorting options
@@ -155,6 +158,21 @@ set sort_directories_first true
 # Enable this if key combinations with the Alt Key don't work for you.
 # (Especially on xterm)
 set xterm_alt_key false
+
+# Whether to include bookmarks in cd command
+set cd_bookmarks true
+
+# Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
+# disable this feature.
+set preview_max_size 0
+
+# Add the highlighted file to the path in the titlebar
+set show_selection_in_titlebar true
+
+# The delay that ranger idly waits for user input, in milliseconds, with a
+# resolution of 100ms.  Lower delay reduces lag between directory updates but
+# increases CPU load.
+set idle_delay 2000
 
 # ===================================================================
 # == Local Options
@@ -171,11 +189,12 @@ set xterm_alt_key false
 alias e    edit
 alias q    quit
 alias q!   quitall
+alias qa   quitall
 alias qall quitall
 alias setl setlocal
 
 alias filter     scout -prt
-alias find       scout -aet
+alias find       scout -aeit
 alias mark       scout -mr
 alias unmark     scout -Mr
 alias search     scout -rs
@@ -205,13 +224,13 @@ map S shell $SHELL
 
 map :  console
 map ;  console
-map !  console shell
+map !  console shell 
 map @  console -p6 shell  %%s
-map #  console shell -p
-map s  console shell
-map r  chain draw_possible_programs; console open_with
-map f  console find
-map cd console cd
+map #  console shell -p 
+map s  console shell 
+map r  chain draw_possible_programs; console open_with 
+map f  console find 
+map cd console cd 
 
 # Tagging / Marking
 map t       tag_toggle
@@ -229,7 +248,7 @@ map <F3> display_file
 map <F4> edit
 map <F5> copy
 map <F6> cut
-map <F7> console mkdir
+map <F7> console mkdir 
 map <F8> console delete
 map <F10> exit
 
@@ -244,7 +263,7 @@ map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
 map <DELETE>   console delete
-map <INSERT>   console touch
+map <INSERT>   console touch 
 
 # VIM-like
 copymap <UP>       k
@@ -288,14 +307,15 @@ map g? cd /usr/share/doc/ranger
 map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size
 map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
-map yp shell -d echo -n %d/%f | xsel -i
-map yd shell -d echo -n %d    | xsel -i
-map yn shell -d echo -n %f    | xsel -i
+map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
+map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
+map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
 
 # Filesystem Operations
 map =  chmod
 
-map cw console rename
+map cw console rename 
+map a  renameConsole
 map A  eval fm.open_console('rename ' + fm.thisfile.basename)
 map I  eval fm.open_console('rename ' + fm.thisfile.basename, position=7)
 
@@ -328,14 +348,14 @@ map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 
 # Searching
 map /  console search 
-map n  search_next 
-map N  search_next forward=False 
-map ct search_next order=tag 
-map cs search_next order=size 
-map ci search_next order=mimetype 
-map cc search_next order=ctime 
-map cm search_next order=mtime 
-map ca search_next order=atime 
+map n  search_next
+map N  search_next forward=False
+map ct search_next order=tag
+map cs search_next order=size
+map ci search_next order=mimetype
+map cc search_next order=ctime
+map cm search_next order=mtime
+map ca search_next order=atime
 
 # Tabs
 map <C-n>     tab_new ~
@@ -361,6 +381,7 @@ map <a-9>     tab_open 9
 
 # Sorting
 map or toggle_option sort_reverse
+map oz set sort=random
 map os chain set sort=size;      set sort_reverse=False
 map ob chain set sort=basename;  set sort_reverse=False
 map on chain set sort=natural;   set sort_reverse=False
@@ -391,7 +412,7 @@ map zP    toggle_option preview_directories
 map zs    toggle_option sort_case_insensitive
 map zu    toggle_option autoupdate_cumulative_size
 map zv    toggle_option use_preview_script
-map zf    console filter
+map zf    console filter 
 
 # Bookmarks
 map `<any>  enter_bookmark %any
@@ -403,17 +424,17 @@ map m<bg>   draw_bookmarks
 copymap m<bg>  um<bg> `<bg> '<bg>
 
 # Generate all the chmod bindings with some python help:
-eval for arg in "rwxXst": cmd("map +u{0} shell -d chmod u+{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map +g{0} shell -d chmod g+{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map +o{0} shell -d chmod o+{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map +a{0} shell -d chmod a+{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map +{0}  shell -d chmod u+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +u{0} shell -f chmod u+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +g{0} shell -f chmod g+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +o{0} shell -f chmod o+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +a{0} shell -f chmod a+{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map +{0}  shell -f chmod u+{0} %s".format(arg))
 
-eval for arg in "rwxXst": cmd("map -u{0} shell -d chmod u-{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map -g{0} shell -d chmod g-{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map -o{0} shell -d chmod o-{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map -a{0} shell -d chmod a-{0} %s".format(arg))
-eval for arg in "rwxXst": cmd("map -{0}  shell -d chmod u-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -u{0} shell -f chmod u-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -g{0} shell -f chmod g-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -o{0} shell -f chmod o-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -a{0} shell -f chmod a-{0} %s".format(arg))
+eval for arg in "rwxXst": cmd("map -{0}  shell -f chmod u-{0} %s".format(arg))
 
 # ===================================================================
 # == Define keys for the console
@@ -491,6 +512,7 @@ copypmap <PAGEDOWN> n  f  <C-F>  <Space>
 copypmap <PAGEUP>   p  b  <C-B>
 
 # Basic
+pmap     <C-l> redraw_window
 pmap     <ESC> pager_close
 copypmap <ESC> q Q i <F3>
 pmap E      edit_file
@@ -526,5 +548,6 @@ tmap <pageup>   eval -q fm.ui.taskview.task_move(0)
 tmap <delete>   eval -q fm.ui.taskview.task_remove()
 
 # Basic
+tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
