--- a/.config/systemd/user/sxhkd@.service
+++ b/.config/systemd/user/sxhkd@.service
@@ -6,8 +6,8 @@ Type=simple
 Environment=DISPLAY=:%i
 ExecStart=/usr/bin/sxhkd
 ExecReload=/usr/bin/kill -s USR1 $MAINPID
+Requisite=wm@%i.target
+After=wm@%i.target
 
 [Install]
 WantedBy=wm@.target
-Requisite=wm@.target
-After=wm@.target
