--- a/.config/systemd/user/xbindkeys@.service
+++ b/.config/systemd/user/xbindkeys@.service
@@ -5,6 +5,9 @@ Description=bind my keys to do things with my keys
 Type=simple
 Environment=DISPLAY=:%i
 ExecStart=/usr/bin/xbindkeys -n
+ExecReload=/usr/bin/killall -HUP xbindkeys
+# Requisite=wm@%i.target
+# After=wm@%i.target
 
 [Install]
 WantedBy=wm@.target
