--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -153,6 +153,7 @@ ext xcf,                 X, flag f = gimp -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+ext ps, has zathura, X, flag f = zathura --fork "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf -- "$@"
