--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,8 @@
-# change prefix to Ctrl-a (like in gnu-screen)
+# ~/.tmux.conf
+#
+# tmux 
+
+# Reasonable key prefix
 unbind C-b
 set-option -g prefix C-a
 set-option -g status-keys vi # Use vi-style key bindings in the status line
@@ -40,20 +44,6 @@ bind-key k select-pane -U
 unbind-key l
 bind-key l select-pane -R
 
-# smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# Pane breaking
-# unbind Up
-# bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-# unbind Down
-# bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-
-# shell
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 
@@ -69,10 +59,6 @@ set -g terminal-overrides 'xterm:colors=256'
 
 # source config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Window cycling
-# bind -r C-h select-window -t:-
-# bind -r C-l select-window -t:+
 
 # history
 set -g history-limit 8096
@@ -101,23 +87,13 @@ set -g status-right '#[bg=#3F3F3F]#[fg=#C5C8C6]#{pane_current_command}#[fg=#7078
 set -g window-status-format '#[fg=#707880][#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F]'
 set -g window-status-current-format '#[bg=#3F3F3F]#[fg=#81A2BE]<#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F#[fg=#81A2BE]>'
 
-# By default, all windows in a session are constrained to the size of the
-# smallest client connected to that session, even if both clients are
-# looking at different windows.
+# Let me resize sessions where there are other clients with smaller windows,
+# as long as both sessions aren't active at once.
 setw -g aggressive-resize on
 
 # Activity monitoring
 setw -g monitor-activity on
 set -g visual-activity on
-
-# Example of using a shell command in the status line
-#set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
-
-# mouse mode
-#set -g mode-mouse on
-#set -g mouse-resize-pane on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
 
 # General status stuff
 set -g status-position bottom
