tweak tmux status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # ~/.tmux.conf
 #
-# tmux 
+# tmux
 
 # Reasonable key prefix
 unbind C-b
@@ -82,10 +82,10 @@ set -g set-titles-string '#T'
 # status bar with load and time
 set -g status-left-length 30
 set -g status-right-length 60
-set -g status-left '#[bg=#5F7F5F]#[fg=#FFFFFF]#{session_name}#[bg=3F3F3f]'
-set -g status-right '#[bg=#3F3F3F]#[fg=#C5C8C6]#{pane_current_command}#[fg=#707880] @ #{pane_pid} #[bg=#494949]#[fg=#C5C8C6]#(date +" %H:%M ")'
-set -g window-status-format '#[fg=#707880][#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F]'
-set -g window-status-current-format '#[bg=#3F3F3F]#[fg=#81A2BE]<#[fg=#707880]#I #[fg=#C5C8C6]#W #[fg=#707880]#F#[fg=#81A2BE]>'
+set -g status-left '#[bg=#BFEBBF]#[fg=#3F3F3F]#{session_name}#[fg=#DCDCCC]#[bg=3F3F3F]'
+set -g status-right '#[bg=#3F3F3F]#[fg=#DFAF8F]#{pane_current_command} @ #{pane_pid} #(date +" %H:%M ")'
+set -g window-status-format '#[fg=#707880]#I#F #[fg=#C5C8C6]#W '
+set -g window-status-current-format '#[bg=#8CD0D3]#[fg=#3F3F3F]#I#F #W#[fg=#8CD0D3] '
 
 # Let me resize sessions where there are other clients with smaller windows,
 # as long as both sessions aren't active at once.
