tmux: automatically renumber panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,6 +53,9 @@ set -g base-index 1
 # start with pane 1
 set -g pane-base-index 1
 
+# automatically number windows to stay near each other
+set -g renumber-windows on
+
 # screen mode
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm:colors=256'
