tmux: use mouse mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -153,3 +153,7 @@ set-window-option -g utf8 on
 set-window-option -g xterm-keys off
 bind-key m command-prompt -p "man >" "new-window 'exec man %%'"
 bind-key b command-prompt -p "ranger >" "new-window 'exec ranger %%'"
+
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-option -g mouse-resize-pane on 
