rifle: open Rust with vim

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -103,6 +103,7 @@ name ^[mM]akefile$            = make
 #--------------------------------------------
 # Code
 #-------------------------------------------
+ext rs = vim -- "$1"
 ext py  = python -- "$1"
 ext pl  = perl -- "$1"
 ext rb  = ruby -- "$1"
