ranger: js with vim

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -104,6 +104,7 @@ name ^[mM]akefile$            = make
 # Code
 #-------------------------------------------
 ext rs = vim -- "$1"
+ext js = vim -- "$1"
 ext py  = python -- "$1"
 ext pl  = perl -- "$1"
 ext rb  = ruby -- "$1"
