tmux: don't do terminal overrides

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,7 +58,7 @@ set -g renumber-windows on
 
 # screen mode
 set -g default-terminal "screen-256color"
-set -g terminal-overrides 'xterm:colors=256'
+# set -g terminal-overrides 'xterm:colors=256'
 
 # source config file
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -89,10 +89,6 @@ set -g status-left '#[bg=#BFEBBF]#[fg=#3F3F3F]#{session_name}#[fg=#DCDCCC]#[bg=3
 set -g status-right '#[bg=#3F3F3F]#[fg=#DFAF8F]#{pane_current_command} @ #{pane_pid} #(date +" %H:%M ")'
 set -g window-status-format '#[fg=#707880]#I#F #[fg=#C5C8C6]#W '
 set -g window-status-current-format '#[bg=#8CD0D3]#[fg=#3F3F3F]#I#F #W#[fg=#8CD0D3] '
-
-# Let me resize sessions where there are other clients with smaller windows,
-# as long as both sessions aren't active at once.
-setw -g aggressive-resize on
 
 # Activity monitoring
 setw -g monitor-activity on
