--- a/i3/i3/config
+++ b/i3/i3/config
@@ -154,6 +154,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    position top
     status_command i3status
     tray_output primary
     workspace_buttons yes
