add tmux macos fix

--- a/tmux.macos/.tmux.conf
+++ b/tmux.macos/.tmux.conf
@@ -31,8 +31,8 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 # Vimish nav
 unbind-key h
@@ -65,7 +65,7 @@ set -g default-terminal "screen-256color"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # history
-set -g history-limit 9999
+set -g history-limit 999999
 
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -147,9 +147,3 @@ set-window-option -g automatic-rename on
 set-window-option -g xterm-keys off
 bind-key m command-prompt -p "man >" "new-window 'exec man %%'"
 bind-key b command-prompt -p "ranger >" "new-window 'exec ranger %%'"
-
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "pbcopy"
-
