--- a/i3/i3/config
+++ b/i3/i3/config
@@ -23,15 +23,16 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -*-terminus-medium-*-*-*-22-*-*-*-*-*-iso8859-*
+font -*-terminus-medium-*-*-*-22-*-*-*-*-*-iso10646-*
 #font pango:Terminus 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Shift+Return exec urxvt
 bindsym $mod+grave exec urxvt
+
 
 # lock --- broken!?
 bindsym $mod+Shift+semicolon exec 'slock'
