--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,12 +11,14 @@ set-option -g status-keys vi # Use vi-style key bindings in the status line
 unbind %
 unbind -
 # New pane in the current directory
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 # New pane in the home directory
 bind | split-window -h
 bind - split-window -v -c "#{pane_current_path}"
 bind _ split-window -v
 bind-key x kill-pane
+
+set -g mouse
 
 # Give us a slightly higher repeat delay for repeatable keystrokes
 #set repeat-time 750
@@ -33,7 +35,7 @@ unbind p
 bind p paste-buffer
 
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Vimish nav
 unbind-key h
@@ -109,22 +111,6 @@ set -g status-interval 2
 # default statusbar colors
 set -g status-fg white
 set -g status-bg default
-set -g status-attr bright
-
-# default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg blue
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
-# command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
 
 # pane-swapping shortcuts
 # pane movement
@@ -147,3 +133,12 @@ set-window-option -g automatic-rename on
 set-window-option -g xterm-keys off
 bind-key m command-prompt -p "man >" "new-window 'exec man %%'"
 bind-key b command-prompt -p "ranger >" "new-window 'exec ranger %%'"
+
+bind-key C-s \
+  if-shell "(($(tmux display -p '#{session_many_attached}') > 0))" \
+    choose-session \
+    "run-shell \"tmux choose-session \\\"switch-client -t '%%'; kill-session -t '$(tmux display -p '#S')'\\\"\""
+# bind-key S \
+#   if-shell "(($(tmux display -p '#{session_many_attached}') > 0))" \
+#     choose-session \
+#     "run-shell \"tmux choose-session \\\"switch-client -t '%%'\\\"\""
