tmux: modern bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,12 @@
 #
 # tmux
 
+
+# plugins (see https://github.com/tmux-plugins/tpm)
+
+set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+
 # Reasonable key prefix
 unbind C-b
 set-option -g prefix C-a
@@ -30,12 +36,16 @@ bind-key s send-prefix
 # I'm a Vim user, this makes navigation easier
 setw -g mode-keys vi # I especially like being able to search with /,? when in copy-mode
 unbind [
-bind Escape copy-mode
+bind Escape copy-mode #-vi
 unbind p
 bind p paste-buffer
 
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+ bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xsel -in -selection clipboard'
+# bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
+bind-key -T copy-mode-vi Y send-keys -X copy-end-of-line "xclip -selection c"
+set -g set-clipboard on
 
 # Vimish nav
 unbind-key h
@@ -142,3 +152,12 @@ bind-key C-s \
 #   if-shell "(($(tmux display -p '#{session_many_attached}') > 0))" \
 #     choose-session \
 #     "run-shell \"tmux choose-session \\\"switch-client -t '%%'\\\"\""
+# set -g @custom_copy_command 'xsel -i'
+# set -g @override_copy_command 'xsel -i'
+# set -g @yank_selection_mouse 'primary'
+# set -g @yank_selection_mouse 'primary'
+# set -g @shell_mode 'vi'
+run '~/.tmux/plugins/tpm/tpm'
+# run-shell '~/.tmux/plugins/tmux-yank/yank.tmux'
+
+
