--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,8 +43,8 @@ bind p paste-buffer
  bind-key -T copy-mode-vi 'v' send -X begin-selection
 # bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xsel -in -selection clipboard'
 # bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
-bind-key -T copy-mode-vi Y send-keys -X copy-end-of-line "xclip -selection c"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy' # 'xclip -sel clip -i'
+bind-key -T copy-mode-vi Y send-keys -X copy-end-of-line 'wl-copy' #"xclip -selection c"
 set -g set-clipboard on
 
 # Vimish nav
